// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShortcutsSection /> render() when given one shortcut render shortcut correctly 1`] = `
<div
  className="shortcuts-section"
>
  <div
    className="shortcuts-section-title"
  >
    Shortcuts Cheatsheet
  </div>
  <hr />
  <Shortcut
    key="Foo"
    keys={
      Array [
        "Ctrl",
      ]
    }
    title="Foo"
  />
</div>
`;

exports[`<ShortcutsSection /> render() when given several shortcuts render all shortcuts correctly 1`] = `
<div
  className="shortcuts-section"
>
  <div
    className="shortcuts-section-title"
  >
    Shortcuts Cheatsheet
  </div>
  <hr />
  <Shortcut
    key="Foo"
    keys={
      Array [
        "Ctrl",
      ]
    }
    title="Foo"
  />
  <Shortcut
    key="Bar"
    keys={
      Array [
        "Alt",
        "Q",
      ]
    }
    title="Bar"
  />
  <Shortcut
    key="FooBar"
    keys={
      Array [
        "Ctrl",
        "Shift",
        "Alt",
        "Q",
      ]
    }
    title="FooBar"
  />
</div>
`;
